Bar column integration
Bar 2D Chart
Bar 3D Chart
Bar Group 2D Chart
Bar Group 3D Chart

integrated in app.js

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ h3 {
   color: #77a3d5;
 }
 
-.container{
-  margin-top: 5%;
+.container div{
+  margin-top: 2%;
 }
+
+.container{
+  margin-bottom:  2%;
+}
+
